Fixed webpack error, cards need spacing adjust and image popup error

--- a/src/blocks/card.css
+++ b/src/blocks/card.css
@@ -29,12 +29,21 @@
 }
 
 .card__delete-button {
+  background: url(../images/Trash.svg) center no-repeat;
   position: absolute;
   top: 18px;
   right: 15px;
-  height: 19px;
   width: 18px;
-  background-color: transparent;
+  height: 19px;
+  border-style: none;
+  -webkit-transition: opacity 0.5s ease-in-out;
+  -o-transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.card__delete-button:hover {
+  cursor: pointer;
+  opacity: 0.6;
 }
 
 .card__description {
@@ -45,18 +54,20 @@
   font-family: "Inter", Arial, sans-serif;
   font-size: 24px;
   font-weight: 900;
-  padding: 25px 20px 25px;
+  border-radius: 0 0 10px 10px;
+  padding: 25px 20px;
 }
 
 .card__like-button {
-  background: transparent url(../images/like-button-inactive.svg) center;
+  background: transparent url(../images/like-button-inactive.svg) center
+    no-repeat;
   width: 21px;
   height: 19px;
   border-style: none;
   background-size: 21px 18px;
   border: none;
-  margin: auto 0 auto 0;
   padding: 0;
+  margin: auto 0 auto 0;
 }
 
 .card__like-button:hover {
